kile (1:1.9.2-3) UNRELEASED; urgency=low

  * TODO confirm #319409 resolution
  * Add script to keep bibtex.xml and latex.xml up-to-date in kdelibs-data
    (Closes: #358863)

 -- Fathi Boudra <fboudra@free.fr>  Mon, 16 Oct 2006 15:47:24 +0200

kile (1:1.9.2-2) unstable; urgency=low

  [Fathi Boudra]
  * Fix tex help path. Thanks to Thomas Braun (Closes: #359872)

 -- Fathi Boudra <fboudra@free.fr>  Mon, 16 Oct 2006 15:35:17 +0200

kile (1:1.9.2-1) unstable; urgency=low

  [Fathi Boudra]
  * New upstream release (Closes: #337550, #359932, #382317)

 -- Fathi Boudra <fboudra@free.fr>  Sat, 19 Aug 2006 15:45:38 +0200

kile (1:1.9.1-2) unstable; urgency=low

  [Mark Purcell]
  * Update debian/watch

  [Ana Beatriz Guerrero Lopez]
  * Dropping re-libtoolizing at build time, instead updating libtool
    with a patch. (Closes: #379827).

 -- Ana Beatriz Guerrero Lopez <ana@ekaia.org>  Fri, 28 Jul 2006 22:20:06 +0200

kile (1:1.9.1-1) unstable; urgency=low

  [Fathi Boudra]
  * New maintainers with Ben's agreement
    * Maintainer: KDE Extras Team
    * Uploaders: Ana Beatriz Guerrero Lopez, Mark Purcell and Fathi Boudra
  * New upstream release (Closes: #337550, #358250, #358857, #276348, #221898,
    #285035)
  * Converted package to cdbs
  * compat: bumped to 5
  * control:
    * removed unneeded Build-depends: libqt3-compat-headers and g++-3.4
      (Closes: #342995)
    * bumped Standards-Version to 3.7.2
    * added texlive-base-bin in Depends (Closes: #372191)
    * added Homepage in long description
  * copyright:
    * added missing copyright for kile grep dialog, plain to latex converter,
      quick document dialog, stats dialog, and create package script
  * docs: merged kile.docs and kile-i18n.docs
  * kile-i18n.install: added es documentation
  * kile.manpages: removed, replaced by an entry in rules
  * kile.menu: renamed to menu
  * README.Debian: merged kile.README.Debian and kile-i18n.README.Debian
  * Added watch file

  [Ana Beatriz Guerrero Lopez]