@@ -10,6 +10,7 @@ kile (1:1.9.2-2) unstable; urgency=low
 
   [Fathi Boudra]
   * Fix tex help path. Thanks to Thomas Braun (Closes: #359872)
+  * Fix not-binnmuable-all-depends-any
 
  -- Fathi Boudra <fboudra@free.fr>  Mon, 16 Oct 2006 15:35:17 +0200
 
